circuit-breaker/deployment/namespace.yml
# create new namespace
apiVersion: v1
kind: Namespace
metadata:
  name: circuit-breaker
  labels:
    name: circuit-breaker
