circuit-breaker/deployment/insurance-service-istio.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: insurance-service-destination
  namespace: circuit-breaker
spec:
  host: insurance-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http1MaxPendingRequests: 10
        maxRequestsPerConnection: 2
    outlierDetection:
      consecutiveErrors: 3
      interval: 30s
      baseEjectionTime: 30s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: insurance-service-vs
  namespace: circuit-breaker
spec:
  hosts:
    - insurance-service
  http:
    - route:
        - destination:
            host: insurance-service
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,refused-stream
        retryRemoteLocalities: true
